updates for atomic mirror
now uses atomic friendly directories
outputs a log file

--- a/atomicmirror/Dockerfile
+++ b/atomicmirror/Dockerfile
@@ -2,6 +2,14 @@ FROM fedora:22
 
 MAINTAINER Joshua Preston <jpreston@redhat.com>
 
+# Setup our locations
+
+ENV CONFDIR /etc/atomicmirror
+ENV DATADIR /var/lib/atomicmirror
+ENV LOGDIR  /var/log/atomicmirror
+
+# Setup the repos we are going to enable for syncing
+
 ENV OSTREE_ENABLE_REPOS fedora-atomic-22
 
 # install needed packages
@@ -11,26 +19,31 @@ RUN dnf install -y rpm-ostree polipo; \
 
 # create required directories
 
-RUN mkdir -p /home/working /srv/rpm-ostree
+RUN mkdir -p ${CONFDIR} ${DATADIR} ${LOGDIR}
 
 # install our run.sh script that does our magic
 
-COPY run.sh /home/working/run.sh
-RUN chmod +x /home/working/run.sh
+COPY run.sh /usr/local/bin/run.sh
+RUN chmod +x /usr/local/bin/run.sh
 
 # install our repository configs
 
-COPY repos /home/working/repos
+COPY repos ${CONFDIR}/repos
 
 # make sure the volume is exported for retention purposes
 
-VOLUME /srv/rpm-ostree
+VOLUME ${CONFDIR}
+VOLUME ${DATADIR}
+VOLUME ${LOGDIR}
 
 # expose default SimpleHTTPServer port and set working dir
 
 EXPOSE 8000
-WORKDIR /home/working
+
+# make sure we're working out of the data directory
+
+WORKDIR ${DATADIR}
 
 # start web proxy and SimpleHTTPServer
 
-CMD /home/working/run.sh ${OSTREE_ENABLE_REPOS}
+CMD /usr/local/bin/run.sh
